--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "loader.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon",
-    "production" : "pm2 start loader.js--name backend"
+    "dev": "nodemon",
+    "production": "pm2 start loader.js--name backend"
   },
   "author": "ferpioli",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "1.0.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-query-int": "^3.0.0",
+    "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.1.4",
     "mongoose-paginate": "^5.0.3",
