--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "loader.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/specs/*.js",
     "dev": "nodemon",
     "production": "pm2 start loader.js--name backend"
   },
@@ -23,6 +23,17 @@
     "pm2": "^2.10.4"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "@types/jest": "22.1.2",
+    "@types/supertest": "2.0.4",
+    "babel-preset-es2015": "6.24.1",
+    "babel-register": "6.24.1",
+    "chai": "^4.1.1",
+    "jest": "22.4.2",
+    "mocha": "^3.5.0",
+    "mongodb": "^2.2.33",
+    "nodemon": "^1.17.5",
+    "supertest": "3.0.0",
+    "ts-jest": "22.0.4",
+    "typescript": "2.6.2"
   }
 }
