inclusão de testes

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "chai": "^4.1.1",
     "jest": "22.4.2",
     "mocha": "^3.5.0",
-    "mongodb": "^2.2.33",
+    "mongodb": "2.2.31",
     "nodemon": "^1.17.5",
     "supertest": "3.0.0",
     "ts-jest": "22.0.4",
